<?xml version="1.0" encoding="utf-8"?>
<!-- Main Container -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"
    android:id="@+id/RV_Buddy">
    <!-- Left Container -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher_round"
            android:id="@+id/IV_BuddyPicture_BuddiesRecycler"/>
    </LinearLayout>
    <!-- Right Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <!-- Top Right Container-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!-- Name -->
            <TextView
                android:id="@+id/TV_Name_BuddiesRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/detailflight_buddies_name" />
            <!-- Lastname -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailflight_buddies_lastname"
                android:id="@+id/TV_LastName_BuddiesRecycler"/>
        </LinearLayout>
        <!-- Bottom Right Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!-- Age -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailflight_buddies_age"
                android:layout_marginEnd="10dp"
                android:id="@+id/TV_Age_BuddiesRecycler"/>
            <!-- Rank -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailflight_buddies_rank"
                android:id="@+id/TV_Rank_BuddiesRecycler"/>
        </LinearLayout>
    </LinearLayout>
    <!-- Right Container -->
</LinearLayout>