<?xml version="1.0" encoding="utf-8"?>
<!-- Main layout -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <!-- Top Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Top Left container -->
        <LinearLayout
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <!-- Plane icon -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_flight_plane_diagonal"/>
        </LinearLayout>
        <!-- Top Central Container -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="1">
            <!-- Flight Code -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailflight_flightcode"
                android:textSize="17sp"
                android:id="@+id/TV_FlightID_DetailFlight"/>
            <!-- Trip Container -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- Departure -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailflight_departure"
                    android:textSize="24sp"
                    android:id="@+id/TV_TakeOffCity_DetailFlight"/>
                <!-- Arrow -->
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_arrow_forward_thick"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"/>
                <!-- Destination -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailflight_destination"
                    android:textSize="24sp"
                    android:id="@+id/TV_LandingCity_DetailFlight"/>
            </LinearLayout>
        </LinearLayout>
        <!-- Top Right Container -->
        <RelativeLayout
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <!-- Date -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_callendar"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="@string/detailflight_flightdate_month"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:id="@+id/TV_FlightMonth_DetailFlight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/detailflight_flightdate_day"
                android:textColor="#000000"
                android:id="@+id/TV_FlightDay_DetailFlight"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Separator -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e0e0e0"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
    </LinearLayout>

    <!-- Flight details Container-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Takeoff Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Left Takeoff Container -->
            <LinearLayout
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <!-- Takeoff Image-->
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_flight_takeoff"/>
                <!-- Dots -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_detail_more"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
            <!-- Right Takeoff Container -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="6">
                <!-- Takeoff time -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailflight_takeofftime"
                    android:textSize="15sp"
                    android:id="@+id/TV_TakeOffTime_DetailFlight"/>
                <!-- Takeoff airport -->
            </LinearLayout>
        </LinearLayout>
        <!-- Landing Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Left Landing Container -->
            <LinearLayout
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">
                <!-- Landing Image -->
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_flight_land"/>
            </LinearLayout>
            <!-- Right Landing Container -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="6">
                <!-- Landing time -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailflight_landingtime"
                    android:textSize="15sp"
                    android:id="@+id/TV_LandingTime_DetailFlight"/>
                <!-- Landing airport -->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Separator -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e0e0e0"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
    </LinearLayout>

    <!-- Middle Container -->
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Left Middle Container -->
        <LinearLayout
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start">
            <!-- Buddy icon -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_buddy"/>
        </LinearLayout>

        <!-- Center Middle Container -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailflight_buddiesonboard"
                android:textSize="17sp"/>
        </LinearLayout>

        <!-- Right Middle container -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailflight_joinflight"
                android:textColor="@color/white"
                android:background="@drawable/shape_button_1"
                android:textSize="10sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:id="@+id/BTN_JoinFlight_DetailFlight"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_place_black_24dp"
                android:tint="#f00001"
                android:id="@+id/IV_FindBuddies_DetailFlight"
                android:visibility="visible"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Separator -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e0e0e0"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
    </LinearLayout>

    <!-- Buddies Recycler View -->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:id="@+id/RV_Buddies_DetailFlight">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>