<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddFlightFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_flight"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_flight_background"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_info" />

                    <EditText
                        android:id="@+id/TV_addflight_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_flight_name"
                        android:maxLength="25" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_flight_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_flight_takeoff" />

                    <EditText
                        android:id="@+id/TV_addflight_ville_depart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_flight_land" />

                    <EditText
                        android:id="@+id/TV_addflight_ville_arrivee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/to" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Date départ"
                                android:textAlignment="center"/>

                            <EditText
                                android:id="@+id/TV_addflight_date_depart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:hint="AAAA/MM/JJ"
                                android:textAlignment="center" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <NumberPicker
                                android:id="@+id/pickerHourDepart"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp" />
                            <NumberPicker
                                android:id="@+id/pickerMinutesDepart"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_marginStart="5dp" />
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Date arrivée"
                                android:textAlignment="center"/>

                            <EditText
                                android:id="@+id/TV_addflight_date_arrivee"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:hint="AAAA/MM/JJ"
                                android:textAlignment="center" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <NumberPicker
                                android:id="@+id/pickerHourArrivee"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp" />
                            <NumberPicker
                                android:id="@+id/pickerMinutesArrivee"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_marginStart="5dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/createAddFlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_button_1"
                android:text="Create"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>